# mira

./: .gitignore  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  build_dkg_docker.fish  docker-compose.yml  pyproject.toml  run_dkg_docker.fish  setup.cfg  tox.ini
.github/workflows/: integration-issues.yml  tests.yml
docker/: Dockerfile  Dockerfile.full  Dockerfile.local  Dockerfile.metaregistry  README.md  build_run_docker.sh  generate_graph.py  generate_obo_graphs.py  metaregistry.Dockerfile  run_on_docker.sh  startup.sh
docs/: Makefile  README.md  _config.yml  index.md  model_metadata_annotation.md  training_material.md
docs/ontology/: index.html
docs/source/: conf.py  dkg.rst  examples.rst  index.rst  metamodel.rst  metaregistry.rst  modeling.rst  sources.rst  terarium_client.rst
docs/terms/: index.html
mira/: __init__.py  coding_assesment_solution_mine.py  examples.py  terarium_client.py
mira/dkg/: __init__.py  api.py  biomodels_importer.py  client.py  constants.py  construct.py  construct_embeddings.py  construct_gilda_cache.py  construct_rdf.py  construct_registry.py  generate_obo_graphs.py  grounding.py  model.py  models.py  physical_constants.py  propose_mappings.py  proxies.py  summarize.py  ui.py  units.py  utils.py  viz.py  web_client.py  wikidata_client.py  wsgi.py
mira/examples/: __init__.py  chime.py  concepts.py  jin2022.py  mech_bayes.py  nabi2021.py  sir.py
mira/metamodel/: __init__.py  comparison.py  composition.py  decapodes.py  decpodes_examples.py  io.py  models.py  ops.py  schema.json  schema.py  search.py  template_model.py  templates.py  units.py  utils.py
mira/modeling/: __init__.py  bilayer.py  gromet_model.py  ode.py  ops.py  petri.py  triples.py  viz.py
mira/openai/: __init__.py  client.py
mira/openai_utility/: client.py
mira/pydantic_setup/: __init__.py
mira/resources/: __init__.py  mapped_biomodels_groundings.csv  mapped_systemdyanmic_groundings.csv  model_annotation_example.json  sbml_units.csv
mira/sources/: __init__.py  bilayer.py  biomodels.py  petri.py  sbml.py  sif.py  space_latex.py  stock_and_flow.py  util.py  vensim.py
mira/tests/: test_gromet.py
notebooks/: ASKEM MIRA demo.ipynb  Add_ontology_subtree_demo.ipynb  DKG RDF Demo.ipynb  DKG_Viz_Demo.ipynb  Entity Similarity Demo.ipynb  Extend_DKG_demo.ipynb  GeoNames Exploration.ipynb  Hackathon Evaluation Scenario 2.ipynb  Hackathon Scenario 1.ipynb  Hackathon Scenario 2 - Find Models with Hospitalizations.ipynb  Hackathon Scenario 3.ipynb  Hackathon Scenario 4.ipynb  Model_Composition_Demo.ipynb  Probability Distribution Demo.ipynb  Rapid construction of new DKGs.ipynb  SBML Qual Demo.ipynb  System Dynamics Ingestion.ipynb  TA1 Extraction Evaluation.ipynb  UAT Exploration.ipynb  Untitled.ipynb  Vensim SIR MIRA Digestion.ipynb  biomodels.ipynb  compositional_grounding_demo.ipynb  dkg_api.ipynb  epi_model_extraction.ipynb  gromet_export.ipynb  llm_extraction.ipynb  llm_extraction_all_images.ipynb  llm_grounding_evaluation.ipynb  metamodel_intro.ipynb  mira_llm_extraction_evaluation.ipynb  mira_llm_grounding_evaluation.ipynb  model_api.ipynb  model_b.json  observable_patterns.ipynb  odes_to_mira.ipynb  pmid_to_model_demo.ipynb  probability_distributions.json  regnets.ipynb  simulation.ipynb  (+5 more)
notebooks/F/: comparison_results_001.json  correct_eqs_list.csv  correct_eqs_list.tsv  correct_eqs_list_EXCEL.xlsx  correct_eqs_list_NUMBERS.numbers  error_analysis.ipynb  error_analysis_evaluation.ipynb  error_analysis_summary_001.csv  extracted_eqs.csv  extracted_eqs.tsv  extracted_eqs_VERSION001.tsv  feature_error_connection.ipynb  llm_extraction_sajat.ipynb  mlkurzus_PROJEKT_KFÉ.ipynb  prompt_development_ideas.ipynb  prompting_strategy.md  test_categorization.json  test_comparison.json  test_features.csv
notebooks/applications/: Bevacizumab_pharmacokinetics.ipynb  Enzyme_substrate_kinetics.ipynb  metabolic_model.ipynb
notebooks/ensemble/: BIOMD0000000955_miranet.json  BIOMD0000000955_template_model.json  BIOMD0000000960_miranet.json  BIOMD0000000960_template_model.json  BIOMD0000000983_miranet.json  BIOMD0000000983_template_model.json  ensemble.ipynb
notebooks/equation extraction development/: multi_agent.ipynb  multi_agent_arch.md  versions_notebook.ipynb
notebooks/evaluation_2023.01/: Scenario 3.ipynb  Scenario1.ipynb  Scenario2.ipynb  Scenario3.ipynb  Untitled.ipynb  scenario1_all_ages.json  scenario1_all_ages_mira.json  scenario1_sir.json  scenario1_sir_mira.json  scenario1_three_ages.json  scenario1_three_ages_mira.json  scenario2_model_comparison.json  scenario2_sidarthe.json  scenario2_sidarthe_mira.json  scenario2_sidarthe_v.json  scenario2_sidarthe_v_mira.json  scenario3_biomd958.json  scenario3_biomd958_mira.json  scenario3_biomd958_rate_law_subs.json  scenario3_biomd960.json  scenario3_biomd960_mira.json  scenario3_biomd960_rate_law_subs.json  scenario3_model_comparison_filtered_mira.json  scenario3_model_comparison_mira.json
notebooks/evaluation_2023.07/: Ensemble Evaluation Model 1.ipynb  eval_ensemble_baseline.json  eval_ensemble_step_1.json  eval_scenario1_1_ii_1.json  eval_scenario1_1_ii_2.json  eval_scenario1_1_ii_3.json  scenario1.ipynb  (+12 more)
scripts/: benchmark_data_annotation.py  biomodels_comparison.py  generate_biomodels_groundings.py
tests/: ABCD_model.xml  __init__.py  sir_flux_span.json  test_amr_source.py  test_askenet.py  test_askenet_source.py  test_bilayer.py  test_biomodels.py  test_decapodes.py  test_decexpr.py  test_distributions.py  test_dkg.py  test_dkg_client.py  test_flux_span.py  test_graph_export.py  test_gromet.py  test_io.py  test_metamodel.py  test_model_api.py  test_model_composition.py  test_ontology.py  test_openai_client.py  test_ops.py  test_petri.py  test_petri_source.py  test_pysd.py  test_sbml.py  test_sbml_export.py  test_sbml_qual.py  test_sif.py  test_stock_flow_source.py  test_stockflow_ascet_source.py  test_stockflow_source.py  test_sympy_dimensions.py  test_sympy_ode_pipeline.py  test_sympy_odes.py  test_sympy_odes_llm.py  test_system_dynamics.py  test_template.py  test_templatemodel_delta.py  (+2 more)
(+448 files in other folders)
