##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = mira
version = 0.8.0

license = BSD-2-Clause
license_files =
    LICENSE

[options]
install_requires =
    pydantic>=2.0.0
    sympy
    typing_extensions
    networkx
    tqdm
    sbmlmath; python_version >= "3.10"
    requests
    jsonschema
    tabulate
    pysd
    more_itertools

zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:

[options.packages.find]
exclude =
    notebooks

[options.extras_require]
ode =
    numpy
    scipy
    sympy
tests =
    pytest
    coverage
    pygraphviz
    pandas
    matplotlib
    matplotlib_venn
dkg-client =
    neo4j
    networkx
    pystow
    tqdm
dkg-construct =
    bioontologies>=0.3.1
    pyobo>=0.9.1,<0.11
    bioregistry>=0.6.13
    click
    pystow
    tabulate
    tqdm
    biomappings
    rdflib
    bioversions<=0.5.550
dkg-embed =
    grape
metaregistry =
    bioregistry[web]
    more_click
web =
    fastapi>=0.100.0
    httpx
    flask
    flasgger
    bootstrap-flask
    gilda
    click
    neo4j
    networkx
    pystow
    tabulate
    pygraphviz
    python-libsbml
    lxml
    bioregistry
    scipy
    numpy
    openai
uvicorn =
    uvicorn
gunicorn =
    gunicorn
docs =
    bioregistry
    bioontologies
    biomappings
    sphinx<7.0.0
    sphinx-rtd-theme>=0.5.1
    sphinx-autodoc-typehints
    sphinx-automodapi
    autodoc-pydantic
    m2r2
    pygraphviz
    pyobo<0.11
    mock
    wget
sbml =
    python-libsbml
    lxml
    bioregistry
sbmlmath =
    # sbmlmath is py3.9+ only. For version below 3.9, use the following install command locally:
    # pip install sbmlmath@git+https://github.com/dweindl/sbmlmath.git --python-version py39 --ignore-requires-python
    # It might be necessary to install sbmlmath, pint and lxml using --no-deps as well.
    pint
    lxml>=4.6.4
    sbmlmath
biomodels =
    pystow
viz =
    pygraphviz
llm =
    openai

[mypy]
plugins = pydantic.mypy

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = numpy
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E203
    E501  # line length
    DAR005  # missing type annotation in documentation
    DAR103  # type annotation mismatch
max-line-length = 120
import-order-style = pycharm
application-import-names =
    mira
    tests
