##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = mira
version = 0.10.1

license = BSD-2-Clause
license_files =
    LICENSE

[options]
install_requires =
    pydantic>=2.0.0
    sympy>=1.14.0
    typing_extensions
    networkx
    tqdm
    sbmlmath<0.4.0; python_version >= "3.10"
    requests
    urllib3<2.0
    jsonschema
    tabulate
    pysd
    more_itertools
    indra @ git+https://github.com/gyorilab/indra.git@master
    # waiting for the branch below to be merged into pysb and for a new version of pysb to be released
    # to make it compatible with sympy>=1.12.0
    pysb @ git+https://github.com/jmuhlich/pysb.git@sympy-numpy-update

zip_safe = false
include_package_data = True
python_requires = >=3.10

# Where is my code
packages = find:

[options.packages.find]
exclude =
    notebooks

[options.extras_require]
ode-extraction =
    mineru[all]==2.6.4
    mineru_vl_utils==0.1.15
    ultralytics==8.3.228
    seaborn==0.13.2
    doclayout_yolo==0.0.4
    albumentations==2.0.8
    opencv-python==4.12.0.88
    pdfminer.six==20250506
    huggingface-hub==0.36.0
    transformers==4.57.1
    xgrammar==0.1.25
    ultralytics-thop==2.0.18
    stringzilla==4.2.3
    albucore==0.0.24
    simsimd==6.5.3
    gradio==5.49.1
ode =
    numpy
    scipy
    sympy
    pystow
tests =
    pytest
    coverage
    pygraphviz
    pandas
    matplotlib
    matplotlib_venn
dkg-client =
    neo4j<6.0.0
    networkx
    pystow
    tqdm
dkg-construct =
    pyobo>=0.12.0
    bioregistry>=0.12.30
    bioontologies>=0.7.2
    click
    pystow
    tabulate
    tqdm
    biomappings
    rdflib
    bioversions>=0.8.101
dkg-embed =
    grape
metaregistry =
    bioregistry[web]
    more_click
web =
    fastapi>=0.100.0
    httpx
    flask
    flasgger
    bootstrap-flask
    gilda
    click
    neo4j<6.0.0
    networkx
    pystow
    tabulate
    pygraphviz
    python-libsbml
    lxml
    bioregistry
    scipy
    numpy
    openai
uvicorn =
    uvicorn
gunicorn =
    gunicorn
docs =
    bioregistry
    bioontologies
    biomappings
    sphinx<7.0.0
    sphinx-rtd-theme>=0.5.1
    sphinx-autodoc-typehints
    sphinx-automodapi
    autodoc-pydantic
    m2r2
    pygraphviz
    pyobo<0.11
    mock
    wget
sbml =
    python-libsbml
    lxml
    bioregistry
sbmlmath =
    # sbmlmath is py3.9+ only. For version below 3.9, use the following install command locally:
    # pip install sbmlmath@git+https://github.com/dweindl/sbmlmath.git --python-version py39 --ignore-requires-python
    # It might be necessary to install sbmlmath, pint and lxml using --no-deps as well.
    pint
    lxml>=4.6.4
    sbmlmath<0.4.0
biomodels =
    pystow
viz =
    pygraphviz
llm =
    openai

[mypy]
plugins = pydantic.mypy

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = numpy
strictness = short

#########################
# Flake8 Configuration  #
# (.flake8)             #
#########################
[flake8]
ignore =
    E203
    E501  # line length
    DAR005  # missing type annotation in documentation
    DAR103  # type annotation mismatch
max-line-length = 120
import-order-style = pycharm
application-import-names =
    mira
    tests
